[package]
name = "hello_world"
version = "0.1.0"
authors = ["yejianxin <yejianxin@rightknights.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/main.rs"

[dependencies]
wasm-bindgen = "0.2.48"